fixed sponsor logo margin issue on small screens

--- a/app/assets/stylesheets/bootstrap_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_customization.css.scss
@@ -77,7 +77,7 @@ body {
 	background-color: #ddd;
 }
 
-.sponsor-logo-row {
+.sponsor-logo {
 	margin-top: 25px;
 	margin-bottom: 75px;
 }
